fix alignment

--- a/src/molecules/ShoppingCartV2/ShoppingCartItem.pcss
+++ b/src/molecules/ShoppingCartV2/ShoppingCartItem.pcss
@@ -152,6 +152,7 @@
       }
 
       &__label {
+        text-align: right;
         margin-bottom: 0px;
       }
 
